fix: desativa service worker temporariamente para debug de página branca

--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
-    <!-- Service Worker para PWA -->
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/medprompts/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="MedPrompts - Biblioteca gamificada de prompts de IA para estudantes de medicina" />
+    <meta name="theme-color" content="#2563eb" />
+    <link rel="manifest" href="/medprompts/manifest.json" />
+    <title>MedPrompts - Prompts de IA para Medicina</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+    
+    <!-- Service Worker para PWA - DESATIVADO TEMPORARIAMENTE PARA DEBUG
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
@@ -13,5 +28,6 @@
         });
       }
     </script>
+    -->
   </body>
 </html>
