--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
+    <!-- Preload critical fonts for faster LCP -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" />
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@600;700&display=swap" /></noscript>
+
     <!-- DNS Prefetch for external resources -->
     <link rel="dns-prefetch" href="https://stream.zeno.fm" />
     <link rel="dns-prefetch" href="https://accounts.google.com" />
